# AMR_firstTeam2

./: .gitignore  README.md
src/amr-2026/src/amr_wander/: README.md  package.xml  setup.cfg  setup.py
src/amr-2026/src/amr_wander/amr_wander/: wander_node.py
src/amr-2026/src/amr_wander/launch/: wander.launch.py
src/path_evaluator/: package.xml  setup.cfg  setup.py
src/path_evaluator/path_evaluator/: evaluator.py
src/sick_scan2-master/config/: sick_tim_5xx_front.yaml
src/storagy/: CMakeLists.txt  package.xml
src/storagy/launch/: amr_web_bringup.launch.py  bringup.launch.py  full_bringup.launch.py  hardware_bringup.launch.py  simulation_bringup.launch.py  teleop_bringup.launch.py
src/storagy/launch/cartographer/: cartographer_sim.launch.py
src/storagy/launch/navigation2/: navigation2.launch.py
src/storagy/map/: 1206_1.pgm  1206_1.yaml  1206_sim_1.pgm  1206_sim_1.yaml  1206_sim_1_keepout.pgm  1206_sim_1_keepout.yaml  1206_sim_1_walls.pgm  2026_amr.pgm  2026_amr.yaml
src/storagy/meshes/: 1206.dae  1206_1.dae  1206_2.dae
src/storagy/param/navigation2/: storagy.yaml
src/storagy/rviz/: storagy.rviz
src/storagy/scripts/: wander_nav_bt_node.py  wander_nav_node.py  yolo_detector.py
src/storagy/urdf/: storagy.urdf
src/storagy/worlds/: 1206_1.sdf  1206_2.sdf  2026_amr.sdf  2026_amr_layout.json  walk.dae
src/storagy_guide/: package.xml  setup.cfg  setup.py
src/storagy_guide/launch/: guide_integrated.launch.py  guide_nav.launch.py
src/storagy_guide/params/: guide_nav.yaml
src/storagy_guide/storagy_guide/: guide_nav_node.py
src/storagy_hide/: package.xml  setup.cfg  setup.py
src/storagy_hide/launch/: hide_bringup.launch.py
src/storagy_hide/params/: hide.yaml
src/storagy_hide/storagy_hide/: aruco_dock.py  dynamic_costmap.py  human_perception.py  state_machine.py
src/storagy_interfaces/: CMakeLists.txt  package.xml
src/storagy_interfaces/srv/: Agent.srv
src/storagy_llm/: setup.py
src/storagy_llm/params/: points.yaml  prompt.yaml
src/storagy_llm/storagy_llm/: agent_service.py  robot_tools.py  web_dashboard.py
src/storagy_llm/web/: app.js  index.html  style.css
(+8 files in other folders)
